memos/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memo
  namespace: memo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memo
  template:
    metadata:
      labels:
        app: memo
    spec:
      securityContext:
        runAsUser: 3001
        runAsGroup: 3001
        fsGroup: 3001
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: memo-vol
          persistentVolumeClaim:
            claimName: memo
      containers:
      - name: memo
        image: neosmemo/memos:0.31.0
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 15m
            memory: 105M
          limits:
            cpu: 75m
            memory: 210M
        volumeMounts:
          - mountPath: "/var/opt/memos"
            name: memo-vol
        ports:
          - containerPort: 5230
---
apiVersion: v1
kind: Service
metadata:
  name: memo
  namespace: memo
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.255.130
  ports:
  - port: 80
    targetPort: 5230
    name: http
  selector:
    app: memo
---
